chamber/styles/directory.css
:root {
    --backgroundcolorDark: #1E3A5F;
    --backgroundcolorLight: white;
    --secondarycolor: gold;
    --fontcolorLight: white;
    --fontcolorDark:#1E3A5F;
    --fontfamilyPrimary: 'DM Sans'

}

* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
header {
    background-color: var(--backgroundcolorDark);
    font-family: var(--fontfamilyPrimary);
    color: var(--fontcolorLight);
}
.mainHeader {
    display: flex;
}

#logo {
    width: 15vh;
    height: auto;
}
/*Dynamic Menu and navigation*/
#menu {
	display: block;
	font-size: 2rem;
	font-weight:700;
	text-decoration: none;
	padding: .5rem .75rem;
    position: absolute;
    top: 1rem;
    right: 1rem;
    color: var(--fontcolorLight);
}
#menu::before {
	content: "≡";
}
nav {
	display: grid;
    grid-template-rows: 0fr;
    transition: grid-template-rows 0.5s ease-out;
}
nav ul {
    overflow: hidden;
}
nav.show {
    grid-template-rows: 1fr;
}
#menu.show::before {
	content: "x";
}
.navigation {
	list-style: none;

	max-width: 900px;
}

.navigation li {

	border-radius: 10px;
}
.navigation a {
	display: block;
	padding: 0.75rem;
	text-align: left;
	text-decoration: none;
    width: 100%;
	font-weight: 700;
	transition: 0.5s;
	font-size: clamp(1rem, 2vmin, 1.5rem);
    color: var(--fontcolorLight);
	
}
.navigation a:hover, .navigation a:active, .navigation a.active {
	color: var(--fontcolorDark);
	background-color: var(--secondarycolor);
}

.navigation a.active {
    background-color: var(--backgroundcolorLight);
    color: var(--fontcolorDark); 
    font-weight: bold;
    border-bottom: 3px solid var(--fontcolorLight); 
}





/*********Directory Main**********/
main {
	margin: 0 auto;
	padding: 0.5rem;
	max-width: 800px;
	background-color: var(--backgroundcolorDark);
	font-family: var(--fontfamilyPrimary), Helvetica, sans-serif;
}

.cards {
	margin: 1rem auto;
	border: 1px solid rgba(0, 0, 0, 0.1);
	padding: 0.5rem;
	background-color: var(--backgroundcolorDark);
	text-align: center;
}

.cards button {
	padding: 1rem;
	font-weight: 700;
}

section {
	border: 1px solid rgba(0, 0, 0, 0.1);
	padding: 0.5rem;
	background-color: var(--backgroundcolorLight);
}

.grid {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
	grid-gap: 5px;
	align-items: center;
}

.grid section {
	text-align: center;
}

.grid img {
	border: 1px solid #fff;
	box-shadow: 0 0 10px #333;
}

.grid section > * {
	margin: 0.1rem;
}

.grid h3 {
	font-family: "DM Sans";
}

.list {
	display: flex;
	flex-direction: column;
}

.list section {
	display: grid;
	grid-template-columns: 2fr 1fr 1fr;
	margin: 0;
	padding: 0.25rem;
}

.list section > * {
	margin: 0 1rem;
}

.list section img {
	display: none; 
}

.list section h3 {
	font-size: 1rem;
	font-family: Roboto, Helvetica, sans-serif;
}

.list section:nth-child(even) {
	background-color: #bed;
}

section h3 {
	font-size: 1.5rem;
}

section p {
	font-weight: 600;
	font-size: smaller;
}

section a {
	font-family: "Roboto", Arial, sans-serif;
	font-size: 0.85rem;
	color: navy;
	letter-spacing: 1.1pt;
}

img {
	height: 75px;
	max-width: 100%;
}

footer{
    background-color:var(--backgroundcolorDark);
    color:var(--fontcolorLight);
    text-align: center;
    padding: 20px;
    font-family: var(--fontfamilyPrimary);
}


/**********Larger views**********/
@media (min-width: 640px) {
    #menu {
        display: none;
    }
    nav {
        grid-template-rows: 1fr;
        justify-content: center;
        align-items: center;
        text-align: center;
        width: 100%;
    }
    .navigation {
        display: flex;
        width: 100%;
    }
    .navigation li {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 200px;
    }
    .navigation a{
        text-align: center;
    }
}

